--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
         </div>
         </div>    
         <script src="js/app.js"></script>
+        <footer id="foot">&copy; Mushtaq & Udacity </footer>
     </body>
     </html>
